--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sreevidya.opal.screen.home.HomeActivity$PlaceholderFragment">
+    tools:context="com.sreevidya.opal.screen.home.HomeActivity">
 
     <TextView
         android:id="@+id/section_label"
