--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightGray"
+    android:background="@android:color/white"
     android:clickable="true"
     android:focusableInTouchMode="true"
     tools:context="com.sreevidya.opal.screen.home.HomeActivity">
